--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
 		<!-- Add typical dependencies for a web application -->
 		<!-- Adds Tomcat and Spring MVC, along others -->
 		<dependency>
+    			<groupId>org.apache.maven.plugins</groupId>
+    			<artifactId>maven-clean-plugin</artifactId>
+    			<version>2.2</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
